# WickedLines

./: .flake8  .gitattributes  CONTRIBUTING.md  HUNT_INDEX.md  README.md  best_openings.md  big_start_pos.md  blog_post.md  blundermap_query.py  common_openings.md  pyproject.toml  requirements.txt  wickedlines.py  wickedlines_test.py
.wickedlines_cache/: r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__0.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__1000.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__1200.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__1400.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__1600.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__1800.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__2000.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__2200.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__blitz__2500.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__classical__0.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__classical__1000.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__classical__1200.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__classical__1400.json  r1bqkbnr_pppp1ppp_2n5_1B2p3_4P3_5N2_PPPP1PPP_RNBQK2R b KQkq - 3 3__classical__1600.json  (+1293 more)
hunt_results/: e4.md  start_pos.md  (+6 more)
(+18 files in other folders)
